--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 				var r = Math.random()*20 + 40;
 				var X = Math.random()*(windowW - 2*r) + r;
 				var Y = Math.random()*(windowH - 2*r) + r;
-				var color = 'rgb(' + R + ',' + G + ','+ B + ',' + a + ')';
+				var color = 'rgba(' + R + ',' + G + ','+ B + ',' + a + ')';
 				var vx =( Math.random()*5 + 5) * Math.pow(-1, Math.ceil(Math.random()*100));
 				var vy =( Math.random()*5 + 5) * Math.pow(-1, Math.ceil(Math.random()*100));
 				balls.push({
